--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,7 @@
-<h1>Mister Cocktails</h1>
-<div class='d-flex justify-space-around flex-wrap'>
+<div class='d-flex justify-space-around'>
 <% @cocktails.each do |cocktail| %>
 
-  <div class="card col-md-3 m-3" style="width: 18rem;">
+  <div class="card col-sm-3 m-">
     <div class="card-body">
       <h5 class="card-title"><%= cocktail.name %></h5>
     </div>
