--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 mx-auto">
-      <%= form_for [@cocktail, @dose ] do |f| %>
+      <%= simple_form_for [@cocktail, @dose]  do |f| %>
        <%= f.label :description %>
        <%= f.text_field :description %>
        <%= f.collection_select(:ingredient, Ingredient.all, :id, :name) %>
