updated css and frontend

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,15 @@
  */
 @import "bootstrap/scss/bootstrap";
 
+body {
+ font-family: 'Jomolhari', serif;
+ background-color: black;
+
+
+}
+
+.type{
+ color:white;
+}
+
 // simple_form helpers
