--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,15 @@
-<div class='d-flex justify-space-around'>
+<div class='d-flex justify-content-center justify-space-around flex-wrap' >
 <% @cocktails.each do |cocktail| %>
 
-  <div class="card col-sm-3 m-">
-    <div class="card-body">
-      <h5 class="card-title"><%= cocktail.name %></h5>
-    </div>
+<div class="card border-dark mb-3 col-md-4" style="max-width: 18rem;">
+  <div class="card-body text-dark" style = "border-radius: 20px">
+    <img class="card-img-top " src="<%=cocktail.image_url %>" alt="Responsive image" style = "width: 200px; height: 250px; resize: auto">
+    <h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5>
   </div>
+</div>
+
+
 <% end %>
 </div>
+
+
