--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,11 @@
 <header id="page-header">
-  <div id = 'masthead'>
-    <h1> <%= link_to "Mister Cocktails", cocktails_path %> </h1>
-    <nav>
-      <p>
-
-        </p>
-    </nav>
-  </div>
+ <div class = 'first-page'>
+  <nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+  <img src="https://res.cloudinary.com/peterfoo22/image/upload/v1571984115/images_j0shc6.png" width="100" height= "100" alt="" id = "topcorner">
+  <span class="navbar-brand mb-0 h1">Mister Cocktail</span>
+  </a>
+ <button type="button" class="btn btn-primary"><%= link_to "Create a Cocktail!", new_cocktail_path, style: 'color:#FFFFFF;' %></button>
+</nav>
+</div>
 </header>
