--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,10 +1,9 @@
-<h1>Create a New Cocktail</h1>
+<h1 style = "color:white">Create a New Cocktail</h1>
 
 
 <%= simple_form_for @cocktail do |f| %>
 
-  <%= f.input :name %>
-
+<%= f.input :name, :input_html => { :wrap => :soft, :rows => 2}, :label => 'Name of Cocktail', wrapper_html: { class:  'type' } %>
   <%= f.button :submit, class: "btn-primary" %>
-  <%= f.button :button, "Cancel", :back, class: "btn-outline-secondary" %>
+
 <% end %>
