--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,21 @@
-<%= @cocktail.name %>
-<% @cocktaildoses.each do |dose| %>
-  <%= dose.description %>
-  <%= dose.ingredient.name %>
-<% end %>
 
+
+
+<div class="card text-center">
+  <h2><%= @cocktail.name %></h2>
+  <div class="card-header">
+  <img class="img-fluid " src="<%=@cocktail.image_url %>" alt="Responsive image" style = "width: 250px; height: 350px, border-radius:5px">
+  </div>
+  <div class="card-body d-flex .flex-column" style="border-radius: 20px">
+    <h5 class="card-title">Ingredients</h5>
+    <p class="card-text"><% @cocktaildoses.each do |dose| %>
+    <ul>
+    <%= dose.description %> <%= dose.ingredient.name %>
+    </ul>
+    <% end %>
+    </p>
+    <%= link_to "Add Ingredient",new_cocktail_dose_path(@cocktail) %>
+  </div>
+  <div class="card-footer text-muted">
+  </div>
+</div>
