destory all functions

--- a/app/assets/stylesheets/doses.scss
+++ b/app/assets/stylesheets/doses.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Doses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+  background-image: url("https://res.cloudinary.com/peterfoo22/image/upload/v1572156673/0211_rdbiek.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h1{
+  text-align: center;
+  font-weight: bold;
+  color:white;
+}
