--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,9 +1,10 @@
 <h1 style = "color:white">Create a New Cocktail</h1>
 
-
+<div class = 'd-flex justify-content-center'>
 <%= simple_form_for @cocktail do |f| %>
 
 <%= f.input :name, :input_html => { :wrap => :soft, :rows => 2}, :label => 'Name of Cocktail', wrapper_html: { class:  'type' } %>
-  <%= f.button :submit, class: "btn-primary" %>
+<%= f.button :submit, class: "btn-primary" %>
 
 <% end %>
+</div>
