--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,21 +1,20 @@
+<div class = "d-flex justify-content-center">
+<img src="<%=@cocktail.image_url %>" class="" alt="..." style = "width: 300px; height: 500px">
+<div class="card" style="width: 18rem;">
 
-
-
-<div class="card text-center">
-  <h2><%= @cocktail.name %></h2>
-  <div class="card-header">
-  <img class="img-fluid " src="<%=@cocktail.image_url %>" alt="Responsive image" style = "width: 250px; height: 350px, border-radius:5px">
+  <div class="card-body">
+    <h5 class="card-title"><%= @cocktail.name %></h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
-  <div class="card-body d-flex .flex-column" style="border-radius: 20px">
-    <h5 class="card-title">Ingredients</h5>
-    <p class="card-text"><% @cocktaildoses.each do |dose| %>
-    <ul>
-    <%= dose.description %> <%= dose.ingredient.name %>
-    </ul>
-    <% end %>
-    </p>
-    <%= link_to "Add Ingredient",new_cocktail_dose_path(@cocktail) %>
-  </div>
-  <div class="card-footer text-muted">
+  <% @cocktaildoses.each do |dose| %>
+  <ul class="list-group list-group-flus">
+    <li class="list-group-item "><%= dose.description %> <br> <%= dose.ingredient.name %> </li>
+    <%= link_to "Delete this Ingredient", dose_path(dose), method: :delete %>
+  </ul>
+  <% end %>
+  <div class="card-body">
+    <%= link_to "Add Ingredient",  new_cocktail_dose_path(@cocktail) %>
   </div>
 </div>
+</div>
+
